# FDCAN-TEST-G4

./: .gitignore  .mxproject  CMakeLists.txt  FDCAN-TEST-G4.ioc  FDCAN_TEST_G4.jdebug  G4_Framework.ioc  G4_Framework.jdebug  G4一键启动OpenOCD.bat  README.md  STM32G473XX_FLASH.ld
Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h  usart.h
Core/Src/: app_freertos.c  dma.c  fdcan.c  gpio.c  main.c  quadspi.c  spi.c  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  tim.c  usart.c
User/Algorithm/Inc/: CKQ_MATH.h  Chassis_Calc.h  Power_Ctrl.h  QuaternionEKF.h  controller.h  kalman_filter.h  mahony_filter.h
User/Algorithm/Src/: CKQ_MATH.c  Chassis_Calc.c  Power_Ctrl.c  QuaternionEKF.c  controller.c  kalman_filter.c  mahony_filter.c
User/App/Inc/: All_Task.h  Chassis_Task.h  IMU_Task.h  System_Status.h
User/App/Src/: All_Task.c  Chassis_Task.c  IMU_Task.c  System_Status.c  Test_Task.c
User/BSP/Inc/: BSP-FDCAN.h  BSP_DWT.h  BSP_ICM42688P.h  BSP_QSPI.h  BSP_SPI.h  BSP_W25N01GV.h  WS2812.h
User/BSP/Src/: BSP_DWT.c  BSP_FDCAN.c  BSP_ICM42688P.c  BSP_QSPI.c  BSP_SPI.c  BSP_W25N01GV.c  WS2812.c
User/Device/Inc/: DBUS.h  DJI_Motor.h  DM_Motor.h  ICM42688P.h  Motor.h  Power_CAP.h  Referee.h  W25N01GV.h
User/Device/Src/: DBUS.c  DJI_Motor.c  DM_Motor.c  ICM42688P.c  Motor.c  Power_CAP.c  Referee.c  W25N01GV.c
User/Inc/: All_Task.h  BSP-FDCAN.h  BSP_DWT.h  BSP_ICM42688P.h  CKQ_MATH.h  DBUS.h  IMU_Task.h  Motor.h  PID.h  QuaternionEKF.h  WS2812.h  controller.h  kalman_filter.h  mahony_filter.h  user_lib.h
User/Middleware/Inc/: CAN_Comm.h
User/Middleware/Src/: System_Status.c
User/Src/: All_Task.c  BSP_DWT.c  BSP_FDCAN.c  BSP_ICM42688P.c  CKQ_MATH.c  DBUS.c  IMU_Task.c  Motor.c  PID.c  QuaternionEKF.c  Vofa.c  WS2812.c  controller.c  kalman_filter.c  mahony_filter.c  user_lib.c
User/Utils/Inc/: All_Init.h  All_Motor.h  All_define.h  CKQ_MATH.h  Vofa.h
User/Utils/Src/: All_Init.c  CKQ_MATH.c
cmake/: starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
